# masked-transformer-comparison

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
analysis_src/: __init__.py  dataset.py  features.py  plots.py
analysis_src/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: initial-stuff.ipynb
