[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "analysis_src"
version = "0.0.1"
description = "Masked learning of a Transformer (similar to ESM2); downstream tasks to do classification"
authors = [
  { name = "Philipp Schickel" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["analysis_src"]
include = ["pyproject.toml", "analysis_src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["analysis_src"]
force-sort-within-sections = true

